# BlockFix

./: .deepsource.toml  app.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  routes.py  utils.py
logs/: rectiflex.log.1  rectiflex.log.2  rectiflex.log.3  rectiflex.log.4  rectiflex.log.5  rectiflex.log.6  rectiflex.log.7  rectiflex.log.8
static/css/: custom.css
static/js/: dashboard.js  notifications.js  tasks.js
templates/: 404.html  500.html  base.html  create_workorder.html  edit_workorder.html  index.html  maintenance.html  view_workorder.html  workorders.html
